chore: set entry point

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "save"
   ],
   "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
